--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ h1 {
    ========================================= */
 
 .faq-page-main {
-    background-color: #c7d7f6;
+    background-color: #e2e2e2;
     /* Light gray background like image */
     padding: 80px 40px;
     min-height: 80vh;
